--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "aircampi-lov-sdk-main",
-  "version": "1.0.0",
+  "name": "aircampi-lov-sdk",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "prepare": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,12 @@
   },
   "homepage": "https://github.com/Bat-Ireedui/aircampi-lov-sdk1#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.1",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
