--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "aircampi-lov-sdk",
-  "version": "1.0.3",
+  "version": "1.8.3",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "prepare": "npm run build",
-    "postversion": "git push && git push --tags"
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -21,12 +22,22 @@
   },
   "homepage": "https://github.com/Bat-Ireedui/aircampi-lov-sdk1#readme",
   "devDependencies": {
-    "@types/jest": "^29.2.1",
-    "jest": "^29.2.2",
-    "ts-jest": "^29.0.3",
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "cors": "^2.8.5"
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "directories": {
+    "lib": "lib"
+  }
 }
